# ProfessorLang-Telegram-ML-Contest

./: .gitignore  README.md
src/: features.cpp  features.h  tglang.cpp  utils.h
train/i.dataset/: 1.languageExtensions.json  3.repositories.csv
train/i.dataset/11.keywords/: keywordExtractor.py  keywords.json  keywords_lang_by_lang.json
train/i.dataset/2.repositoryFinder/: fileFinder.js  package-lock.json  removeFilesWithUnAcceptedContent.py  repositoryFinder.js
train/i.dataset/4.repoDownloader/: package-lock.json  package.json  repoDownloader.js
train/i.dataset/7.listSources/: listSources.js  package-lock.json  package.json
train/i.dataset/9.samplesGenerator/: package-lock.json  package.json  samplesGenerator.js  samplesGeneratorToValidate.js
train/ii.dataset_other_code/chat_samples/: extract.py
train/iii.trainer/: 4.importantFeatures.json  FINAL_KEYWORDS.json
train/iii.trainer/1.preprocess/: preprocess.py  used_keywords.json
train/iii.trainer/3.importantFeatures/: importantFeatures.py  importantFeaturesSortNow.py  used_keywords.json
train/iii.trainer/5.reprocessor/: reprocessor.py
train/iii.trainer/7.train/: final_feature_importance.json  trainer.py  used_keywords.json  validate.py
train/iv.tglib/: CMakeLists.txt  utils.cpp
